adds a validation in the annotation processor
The Json annotation classes should define a proper constructor